# poetry-envrc-plugin

./: LICENSE.txt  README.md  pyproject.toml
poetry_envrc_plugin/: envrc_plugin.py
tests/: test_envrc_plugin.py
